--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="stars"></div>
   <div class="container">
-    <h1>¡Feliz Cumpleaños, Nubi!!</h1>
+    <h1>¡Feliz Cumpleaños, Luis Ángel!</h1>
     <p class="intro">
       Hoy completas tu vuelta número <strong>15</strong> alrededor del Sol.<br>
       Has vivido <strong>5475 días</strong> llenos de aventuras. ¡Y eso merece una celebración épica!
@@ -22,7 +22,7 @@
 
     <p class="hint">Si no da 15... te quedas sin pastel (¡es broma, pero inténtalo!).</p>
 
-    <button id="audio-btn">Reproducir música</button>
+    <button id="audio-btn">Play música</button>
     <audio id="audio" src="audio/LifeE.mp3"></audio>
   </div>
 
