--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="stars"></div>
   <div class="container">
-    <h1>¡Feliz Cumpleaños, Luis Ángel!</h1>
+    <h1>¡Feliz Cumpleaños, + Nubi!!</h1>
     <p class="intro">
       Hoy completas tu vuelta número <strong>15</strong> alrededor del Sol.<br>
       Has vivido <strong>5475 días</strong> llenos de aventuras. ¡Y eso merece una celebración épica!
