--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Feliz Cumple Luis Ángel</title>
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
-</head>
+  <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&family=Barrio&display=swap" rel="stylesheet"></head>
 <body>
   <div class="stars"></div>
   <div class="container">
-    <h1>¡Feliz Cumpleaños, + Nubi!!</h1>
+    <h1>¡Feliz Cumpleaños, Nubi!!</h1>
     <p class="intro">
       Hoy completas tu vuelta número <strong>15</strong> alrededor del Sol.<br>
       Has vivido <strong>5475 días</strong> llenos de aventuras. ¡Y eso merece una celebración épica!
@@ -22,7 +21,7 @@
 
     <p class="hint">Si no da 15... te quedas sin pastel (¡es broma, pero inténtalo!).</p>
 
-    <button id="audio-btn">Play música</button>
+    <button id="audio-btn">Reproducir música</button>
     <audio id="audio" src="audio/LifeE.mp3"></audio>
   </div>
 
