--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Feliz Cumple Luis Ángel</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&family=Barrio&display=swap" rel="stylesheet"></head>
+  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&family=Barrio&display=swap" rel="stylesheet">
+</head>
 <body>
   <div class="stars"></div>
   <div class="container">
-    <h1>¡Feliz Cumpleaños, Nubi!!</h1>
+    <h1>¡Feliz Cumpleaños, Luis Ángel!</h1>
     <p class="intro">
-      Hoy completas tu vuelta número <strong>15</strong> alrededor del Sol.<br>
+      Hoy completas tu vuelta número <strong>15</strong> alrededor del Sol.<br />
       Has vivido <strong>5475 días</strong> llenos de aventuras. ¡Y eso merece una celebración épica!
     </p>
-
     <div class="equation">
       (3 × 5) + (12 ÷ 4) - 3 = ?
     </div>
-
     <p class="hint">Si no da 15... te quedas sin pastel (¡es broma, pero inténtalo!).</p>
-
     <button id="audio-btn">Reproducir música</button>
     <audio id="audio" src="audio/LifeE.mp3"></audio>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
